# faabric

./: CMakeLists.txt  b  bb.sh  capture.sh  clean.sh  comment.sh  docker-compose.yml  download.sh  flame.sh  ids.txt  re  t  todo.txt  x
dist-test/: dev_server.sh
include/faabric/mpi/: MpiMessage.h  MpiWorld.h
include/faabric/transport/tcp/: ConnectionFileDescriptor.h  RecvSocket.h  SendSocket.h  Socket.h
include/faabric/util/: mem_pool.h  trace.h
logs/mpi/: 1.txt  2.txt
plot/: parse-log.py  plot.sh
src/mpi/: MpiWorld.cpp
src/mpi/tcp/: mpi_endpoint.cpp  mpi_endpoint_single.cpp  print_macros.hpp  socket_opt.c  tcp.hpp  tcp_addr.cpp  tcp_client.cpp  tcp_endpoint.cpp  tcp_server.cpp  tcp_socket.cpp
src/transport/: PointToPointBroker.cpp
src/transport/tcp/: CMakeLists.txt  ConnectionFileDescriptor.cpp  RecvSocket.cpp  SendSocket.cpp  Socket.cpp  SocketOptions.cpp
src/util/: CMakeLists.txt  mem_pool.cpp  trace.cpp
tasks/: docker.py
tcp/: CMakeLists.txt  build.sh  run.sh  x
tcp/examples/: dist-worker.cpp  tcp-endpoint.cpp
tcp/include/: dist.api.hpp  dist.hpp  dist.types.hpp  log.hpp  mpi_endpoint.hpp  patient.hpp  print_macros.hpp  socket_opt.h  stdtracer_xterm.hpp  tcp.hpp
tests/test/mpi/: test_mpi_world.cpp
tests/test/transport/: test_tcp_sockets.cpp
