CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(project)

# SET(CUDA_HOME /usr/local/cuda) SET(CMAKE_CUDA_COMPILER ${CUDA_HOME}/bin/nvcc)
# ENABLE_LANGUAGE(CUDA)

SET(CMAKE_CXX_STANDARD 20)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

FILE(GLOB_RECURSE SRCS ${CMAKE_SOURCE_DIR}/../src/mpi/tcp/*)

ADD_LIBRARY(mpi-tcp ${SRCS})

ADD_EXECUTABLE(tcp-endpoint ${CMAKE_SOURCE_DIR}/examples/tcp-endpoint.cpp)
TARGET_LINK_LIBRARIES(tcp-endpoint mpi-tcp)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../src)
