CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(project)

# SET(CUDA_HOME /usr/local/cuda) SET(CMAKE_CUDA_COMPILER ${CUDA_HOME}/bin/nvcc)
# ENABLE_LANGUAGE(CUDA)

SET(CMAKE_CXX_STANDARD 20)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

FILE(GLOB_RECURSE SRCS ${CMAKE_SOURCE_DIR}/../src/mpi/tcp/*)

ADD_LIBRARY(mpi-tcp ${SRCS})

FUNCTION(ADD_EXAMPLE src)
    GET_FILENAME_COMPONENT(target ${src} NAME_WE)
    STRING(REPLACE "_" "-" target ${target})
    ADD_EXECUTABLE(${target} ${src})
    TARGET_LINK_LIBRARIES(${target} ${LIB_NAME})
    TARGET_LINK_LIBRARIES(${target} mpi-tcp)
ENDFUNCTION()

ADD_EXAMPLE(${CMAKE_SOURCE_DIR}/examples/tcp-endpoint.cpp)
# ADD_EXAMPLE(${CMAKE_SOURCE_DIR}/examples/dist-worker.cpp)

# INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
